# GSE_99L_main_control

./: Cargo.toml
src/: lib.rs  state.rs
src/tasks/: can_communication.rs  execute_ignition.rs  mod.rs  solenoid_valve.rs
