[package]
edition      = "2024"
name         = "c99l_main_control"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "c99l_main_control"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32", "unstable"] }

esp-rtos = { version = "0.2.0", features = ["embassy", "esp32"] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32"] }

embassy-executor = { version = "0.9.1", features = [] }
embassy-time = "0.5.0"
esp-backtrace = { version = "0.18.1", features = [
  "esp32",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.16.1", features = ["log-04","esp32"] }

critical-section = "1.2.0"
static_cell      = "2.1.1"
embedded-can = "0.4.1"
embassy-sync = "0.7.2"
embassy-futures = "0.1.2"
nb = "1.1.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
